# issues_viewer

./: .clang-format  CMakeLists.txt  Main.qml  issues_viewer_presenter.cpp  issues_viewer_presenter.h  main.cpp
